--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-17  Chris Lyttle  <chris@wilddev.net>
+
+	* configure.in: Release 1.8.5
+	* NEWS: Release 1.8.5
+
 2003-08-15  Christian Stimming  <stimming@tuhh.de>
 
 	* src/import-export/import-backend.c: Workaround for
