--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnucash 1.8\n"
 "POT-Creation-Date: 2003-08-12 21:30+0200\n"
-"PO-Revision-Date: 2003-08-12 23:17+0200\n"
+"PO-Revision-Date: 2003-08-18 22:55+0200\n"
 "Last-Translator: Christian Stimming <stimming@tuhh.de>\n"
 "Language-Team: DE\n"
 "MIME-Version: 1.0\n"
@@ -3205,7 +3205,7 @@ msgstr "Sortiere nach Nummer"
 
 #: src/gnome/glade/register.glade.h:80
 msgid "Sort by the statement date (unreconciled items last)"
-msgstr "Nach Statement-Datum sortieren (nicht abgeglichene Einträge zuletzt)"
+msgstr "Nach Datum des Abgleichens/Kontoauszugs sortieren (nicht abgeglichene Einträge zuletzt)"
 
 #: src/gnome/glade/register.glade.h:82
 msgid "St_yle"
