2003-08-18  Christian Stimming  <stimming@tuhh.de>
	* po/*.po: msgmerge all translations, as requested, to speed up
	compilation time significantly.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@9117 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-18  Christian Stimming  <stimming@tuhh.de>
+
+	* po/*.po: msgmerge all translations, as requested, to speed up
+	compilation time significantly.
+
 2003-08-17  Chris Lyttle  <chris@wilddev.net>
 
 	* configure.in: Release 1.8.5
