Add back detailed compile time checks.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@9119 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-18  David Hampton  <hampton@employees.org>
+
+	* macros/compiler-flags.m4: Add back detailed compile time checks.
+	* various: Fix compile time warnings.
+
 2003-08-15  David Hampton  <hampton@employees.org>
 
 	* src/app-utils/global-options.c: Prevent a crash if there's no
