--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-18  Chris Lyttle  <chris@wilddev.net>
+
+	* Release 1.8.5 re-tagged
+
 2003-08-18  Christian Stimming  <stimming@tuhh.de>
 
 	* po/*.po: msgmerge all translations, as requested, to speed up
